--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "haruncpi/laravel-id-generator": "^1.0",
     "infyomlabs/adminlte-templates": "^3.0",
     "infyomlabs/laravel-generator": "^3.1",
+    "intervention/image": "^2.7",
     "laravel/framework": "^8.40",
     "laravel/tinker": "^2.5",
     "laravel/ui": "^3.3",
