Sales and revenue graphs at dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ public/js/checkout.js.LICENSE.txt
 public/js/home.js.LICENSE.txt
 
 public/images/cursos/original/
+
+public/js/admin.js.LICENSE.txt
